app/assets/stylesheets/protocol_form.sass
/* Copyright © 2011-2016 MUSC Foundation for Research Development*/
/* All rights reserved.*/

/* Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:*/

/* 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.*/

/* 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following*/
/* disclaimer in the documentation and/or other materials provided with the distribution.*/

/* 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products*/
/* derived from this software without specific prior written permission.*/

/* THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING,*/
/* BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT*/
/* SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL*/
/* DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS*/
/* INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR*/
/* TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.*/

/* New/Edit Protocol */
@media( min-width: 1200px )
  #funding-status, .pending_funding, #federal-non-phs, .approval_pending, #udak-number
    .col-lg-10
      padding-top: 11px

  .investigational_products, .oral_health_cobre
    .col-lg-10
      padding-top: 6px

  #project-roles .form-group .col-lg-10 label
    margin-top: 8px

  .nct-number
    .col-lg-10
      padding-top: 10px

textarea
  resize: vertical

.exemption-radio
  margin: 0

.inv-device-number-field
  margin-top: 3px

.gray_note 
  color: gray

